// Copyright(C) 2023 InfiniFlow, Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package infinity

import (
	"fmt"
)

// Connect creates a new connection to Infinity
// This is a factory function that creates the appropriate connection type based on the URI
// For now, only NetworkAddress (remote thrift connection) is supported
//
// Example:
//
//	conn, err := infinity.Connect(infinity.LocalHost)
//	if err != nil {
//	    log.Fatal(err)
//	}
//	defer conn.Disconnect()
//
//	db, err := conn.GetDatabase("default_db")
func Connect(uri URI) (InfinityConnection, error) {
	switch u := uri.(type) {
	case NetworkAddress:
		return NewRemoteThriftConnection(u)
	default:
		return nil, NewInfinityException(
			int(ErrorCodeInvalidServerAddress),
			fmt.Sprintf("Unknown uri type: %T", uri),
		)
	}
}

// RemoteThriftConnection implements InfinityConnection for remote thrift connections
type RemoteThriftConnection struct {
	uri           URI
	client        interface{} // Placeholder for thrift client
	isConnected   bool
	dbName        string
}

// NewRemoteThriftConnection creates a new remote thrift connection
func NewRemoteThriftConnection(address NetworkAddress) (*RemoteThriftConnection, error) {
	// TODO: Implement actual thrift client initialization
	// For now, this is a placeholder implementation
	conn := &RemoteThriftConnection{
		uri:         address,
		isConnected: true,
		dbName:      "default_db",
		client:      nil,
	}
	return conn, nil
}

// Disconnect closes the connection
func (c *RemoteThriftConnection) Disconnect() (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection already closed")
	}

	// TODO: Implement actual thrift disconnect
	// c.client.Disconnect()

	c.isConnected = false
	return struct{}{}, nil
}

// CreateDatabase creates a new database
func (c *RemoteThriftConnection) CreateDatabase(dbName string, conflictType ConflictType, comment string) (Database, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}

	// TODO: Implement thrift call
	// res := c.client.CreateDatabase(dbName, conflictType, comment)
	// if res.ErrorCode != ErrorCodeOK {
	//     return nil, NewInfinityException(int(res.ErrorCode), res.ErrorMsg)
	// }

	return &RemoteDatabase{conn: c, dbName: dbName}, nil
}

// ListDatabases lists all databases
func (c *RemoteThriftConnection) ListDatabases() (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// ShowDatabase shows details of a specific database
func (c *RemoteThriftConnection) ShowDatabase(dbName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// DropDatabase drops a database
func (c *RemoteThriftConnection) DropDatabase(dbName string, conflictType ConflictType) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// GetDatabase gets a database object
func (c *RemoteThriftConnection) GetDatabase(dbName string) (Database, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call to verify database exists
	return &RemoteDatabase{conn: c, dbName: dbName}, nil
}

// ShowCurrentNode shows current node information
func (c *RemoteThriftConnection) ShowCurrentNode() (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// CreateDatabaseSnapshot creates a snapshot of a database
func (c *RemoteThriftConnection) CreateDatabaseSnapshot(snapshotName string, dbName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// RestoreDatabaseSnapshot restores a database from a snapshot
func (c *RemoteThriftConnection) RestoreDatabaseSnapshot(snapshotName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// CreateSystemSnapshot creates a system-wide snapshot
func (c *RemoteThriftConnection) CreateSystemSnapshot(snapshotName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// RestoreSystemSnapshot restores the system from a snapshot
func (c *RemoteThriftConnection) RestoreSystemSnapshot(snapshotName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// ListSnapshots lists all snapshots
func (c *RemoteThriftConnection) ListSnapshots() (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// ShowSnapshot shows details of a specific snapshot
func (c *RemoteThriftConnection) ShowSnapshot(snapshotName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// DropSnapshot drops a snapshot
func (c *RemoteThriftConnection) DropSnapshot(snapshotName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// Cleanup performs cleanup operations
func (c *RemoteThriftConnection) Cleanup() (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// Optimize optimizes a table
func (c *RemoteThriftConnection) Optimize(dbName string, tableName string) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// TestCommand executes a test command
func (c *RemoteThriftConnection) TestCommand(commandContent string) error {
	if !c.isConnected {
		return NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil
}

// FlushData flushes data to disk
func (c *RemoteThriftConnection) FlushData() error {
	if !c.isConnected {
		return NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil
}

// FlushCatalog flushes catalog to disk
func (c *RemoteThriftConnection) FlushCatalog() error {
	if !c.isConnected {
		return NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil
}

// SetConfig sets a configuration value
func (c *RemoteThriftConnection) SetConfig(configName string, configValue interface{}) (interface{}, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// ShowConfig shows a configuration value
func (c *RemoteThriftConnection) ShowConfig(configName string) (*ConfigResponse, error) {
	if !c.isConnected {
		return nil, NewInfinityException(int(ErrorCodeClientClose), "Connection is closed")
	}
	// TODO: Implement thrift call
	return nil, nil
}

// RemoteDatabase implements Database interface for remote connections
type RemoteDatabase struct {
	conn   *RemoteThriftConnection
	dbName string
}

// CreateTable creates a new table
func (d *RemoteDatabase) CreateTable(tableName string, columnsDefinition TableSchema, conflictType ConflictType) (Table, error) {
	// TODO: Implement thrift call
	return &RemoteTable{db: d, tableName: tableName}, nil
}

// DropTable drops a table
func (d *RemoteDatabase) DropTable(tableName string, conflictType ConflictType) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ListTables lists all tables
func (d *RemoteDatabase) ListTables() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowTable shows table details
func (d *RemoteDatabase) ShowTable(tableName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// GetTable gets a table object
func (d *RemoteDatabase) GetTable(tableName string) (Table, error) {
	// TODO: Implement thrift call to verify table exists
	return &RemoteTable{db: d, tableName: tableName}, nil
}

// CreateTableSnapshot creates a snapshot of a table
func (d *RemoteDatabase) CreateTableSnapshot(snapshotName string, tableName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// RestoreTableSnapshot restores a table from a snapshot
func (d *RemoteDatabase) RestoreTableSnapshot(snapshotName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// RemoteTable implements Table interface for remote connections
type RemoteTable struct {
	db        *RemoteDatabase
	tableName string
}

// Rename renames the table
func (t *RemoteTable) Rename(newTableName string) (interface{}, error) {
	// TODO: Implement thrift call
	t.tableName = newTableName
	return nil, nil
}

// CreateIndex creates an index
func (t *RemoteTable) CreateIndex(indexName string, indexInfo *IndexInfo, conflictType ConflictType, indexComment string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// DropIndex drops an index
func (t *RemoteTable) DropIndex(indexName string, conflictType ConflictType) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowIndex shows index details
func (t *RemoteTable) ShowIndex(indexName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ListIndexes lists all indexes
func (t *RemoteTable) ListIndexes() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// DumpIndex dumps index information
func (t *RemoteTable) DumpIndex(indexName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowColumns shows all columns
func (t *RemoteTable) ShowColumns() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowSegments shows all segments
func (t *RemoteTable) ShowSegments() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowSegment shows segment details
func (t *RemoteTable) ShowSegment(segmentID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowBlocks shows all blocks in a segment
func (t *RemoteTable) ShowBlocks(segmentID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowBlock shows block details
func (t *RemoteTable) ShowBlock(segmentID int, blockID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowBlockColumn shows column information for a block
func (t *RemoteTable) ShowBlockColumn(segmentID int, blockID int, columnID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Insert inserts data
func (t *RemoteTable) Insert(data interface{}) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ImportData imports data from a file
func (t *RemoteTable) ImportData(filePath string, importOptions *ImportOption) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ExportData exports data to a file
func (t *RemoteTable) ExportData(filePath string, exportOptions *ExportOption, columns []string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Delete deletes rows
func (t *RemoteTable) Delete(cond string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Update updates rows
func (t *RemoteTable) Update(cond string, data map[string]interface{}) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// MatchDense performs dense vector search
func (t *RemoteTable) MatchDense(vectorColumnName string, embeddingData VEC, embeddingDataType string, distanceType string, topN int, knnParams map[string]string) Table {
	// TODO: Implement query builder
	return t
}

// MatchText performs full-text search
func (t *RemoteTable) MatchText(fields string, matchingText string, topN int, extraOptions map[string]interface{}) Table {
	// TODO: Implement query builder
	return t
}

// MatchTensor performs tensor search
func (t *RemoteTable) MatchTensor(columnName string, queryData VEC, queryDataType string, topN int, extraOption map[string]interface{}) Table {
	// TODO: Implement query builder
	return t
}

// MatchSparse performs sparse vector search
func (t *RemoteTable) MatchSparse(vectorColumnName string, sparseData interface{}, distanceType string, topN int, optParams map[string]string) Table {
	// TODO: Implement query builder
	return t
}

// Fusion combines multiple search results
func (t *RemoteTable) Fusion(method string, topN int, fusionParams map[string]interface{}) Table {
	// TODO: Implement query builder
	return t
}

// Output specifies output columns
func (t *RemoteTable) Output(columns []string) Table {
	// TODO: Implement query builder
	return t
}

// Highlight specifies highlight columns
func (t *RemoteTable) Highlight(columns []string) Table {
	// TODO: Implement query builder
	return t
}

// Filter applies filter
func (t *RemoteTable) Filter(filter string) Table {
	// TODO: Implement query builder
	return t
}

// Limit sets limit
func (t *RemoteTable) Limit(limit int) Table {
	// TODO: Implement query builder
	return t
}

// Offset sets offset
func (t *RemoteTable) Offset(offset int) Table {
	// TODO: Implement query builder
	return t
}

// GroupBy groups results
func (t *RemoteTable) GroupBy(groupByExprList interface{}) Table {
	// TODO: Implement query builder
	return t
}

// Having applies having clause
func (t *RemoteTable) Having(havingExpr string) Table {
	// TODO: Implement query builder
	return t
}

// Sort sorts results
func (t *RemoteTable) Sort(orderByExprList [][2]interface{}) Table {
	// TODO: Implement query builder
	return t
}

// Option sets options
func (t *RemoteTable) Option(optionKV map[string]interface{}) Table {
	// TODO: Implement query builder
	return t
}

// ToString returns query as string
func (t *RemoteTable) ToString() string {
	// TODO: Implement query builder
	return ""
}

// ToResult executes query and returns result
func (t *RemoteTable) ToResult() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ToDF returns result as DataFrame
func (t *RemoteTable) ToDF() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ToPL returns result as Polars
func (t *RemoteTable) ToPL() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ToArrow returns result as Arrow
func (t *RemoteTable) ToArrow() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Explain returns execution plan
func (t *RemoteTable) Explain(explainType ExplainType) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Optimize optimizes the table
func (t *RemoteTable) Optimize() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// AlterIndex alters an index
func (t *RemoteTable) AlterIndex(indexName string, optParams map[string]string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// AddColumns adds columns
func (t *RemoteTable) AddColumns(columnDefs map[string]*ColumnDefinition) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// DropColumns drops columns
func (t *RemoteTable) DropColumns(columnNames interface{}) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Compact compacts the table
func (t *RemoteTable) Compact() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}
