// Copyright(C) 2026 InfiniFlow, Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package infinity



// Table represents a table for remote operations
type Table struct {
	db        *Database
	tableName string
}

// Rename renames the table
func (t *Table) Rename(newTableName string) (interface{}, error) {
	// TODO: Implement thrift call
	t.tableName = newTableName
	return nil, nil
}

// CreateIndex creates an index
func (t *Table) CreateIndex(indexName string, indexInfo *IndexInfo, conflictType ConflictType, indexComment string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// DropIndex drops an index
func (t *Table) DropIndex(indexName string, conflictType ConflictType) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowIndex shows index details
func (t *Table) ShowIndex(indexName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ListIndexes lists all indexes
func (t *Table) ListIndexes() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// DumpIndex dumps index information
func (t *Table) DumpIndex(indexName string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowColumns shows all columns
func (t *Table) ShowColumns() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowSegments shows all segments
func (t *Table) ShowSegments() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowSegment shows segment details
func (t *Table) ShowSegment(segmentID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowBlocks shows all blocks in a segment
func (t *Table) ShowBlocks(segmentID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowBlock shows block details
func (t *Table) ShowBlock(segmentID int, blockID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ShowBlockColumn shows column information for a block
func (t *Table) ShowBlockColumn(segmentID int, blockID int, columnID int) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Insert inserts data
func (t *Table) Insert(data interface{}) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ImportData imports data from a file
func (t *Table) ImportData(filePath string, importOptions *ImportOption) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ExportData exports data to a file
func (t *Table) ExportData(filePath string, exportOptions *ExportOption, columns []string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Delete deletes rows
func (t *Table) Delete(cond string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Update updates rows
func (t *Table) Update(cond string, data map[string]interface{}) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// MatchDense performs dense vector search
func (t *Table) MatchDense(vectorColumnName string, embeddingData VEC, embeddingDataType string, distanceType string, topN int, knnParams map[string]string) *Table {
	// TODO: Implement query builder
	return t
}

// MatchText performs full-text search
func (t *Table) MatchText(fields string, matchingText string, topN int, extraOptions map[string]interface{}) *Table {
	// TODO: Implement query builder
	return t
}

// MatchTensor performs tensor search
func (t *Table) MatchTensor(columnName string, queryData VEC, queryDataType string, topN int, extraOption map[string]interface{}) *Table {
	// TODO: Implement query builder
	return t
}

// MatchSparse performs sparse vector search
func (t *Table) MatchSparse(vectorColumnName string, sparseData interface{}, distanceType string, topN int, optParams map[string]string) *Table {
	// TODO: Implement query builder
	return t
}

// Fusion combines multiple search results
func (t *Table) Fusion(method string, topN int, fusionParams map[string]interface{}) *Table {
	// TODO: Implement query builder
	return t
}

// Output specifies output columns
func (t *Table) Output(columns []string) *Table {
	// TODO: Implement query builder
	return t
}

// Highlight specifies highlight columns
func (t *Table) Highlight(columns []string) *Table {
	// TODO: Implement query builder
	return t
}

// Filter applies filter
func (t *Table) Filter(filter string) *Table {
	// TODO: Implement query builder
	return t
}

// Limit sets limit
func (t *Table) Limit(limit int) *Table {
	// TODO: Implement query builder
	return t
}

// Offset sets offset
func (t *Table) Offset(offset int) *Table {
	// TODO: Implement query builder
	return t
}

// GroupBy groups results
func (t *Table) GroupBy(groupByExprList interface{}) *Table {
	// TODO: Implement query builder
	return t
}

// Having applies having clause
func (t *Table) Having(havingExpr string) *Table {
	// TODO: Implement query builder
	return t
}

// Sort sorts results
func (t *Table) Sort(orderByExprList [][2]interface{}) *Table {
	// TODO: Implement query builder
	return t
}

// Option sets options
func (t *Table) Option(optionKV map[string]interface{}) *Table {
	// TODO: Implement query builder
	return t
}

// ToString returns query as string
func (t *Table) ToString() string {
	// TODO: Implement query builder
	return ""
}

// ToResult executes query and returns result
func (t *Table) ToResult() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ToDF returns result as DataFrame
func (t *Table) ToDF() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ToPL returns result as Polars
func (t *Table) ToPL() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// ToArrow returns result as Arrow
func (t *Table) ToArrow() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Explain returns execution plan
func (t *Table) Explain(explainType ExplainType) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Optimize optimizes the table
func (t *Table) Optimize() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// AlterIndex alters an index
func (t *Table) AlterIndex(indexName string, optParams map[string]string) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// AddColumns adds columns
func (t *Table) AddColumns(columnDefs map[string]*ColumnDefinition) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// DropColumns drops columns
func (t *Table) DropColumns(columnNames interface{}) (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}

// Compact compacts the table
func (t *Table) Compact() (interface{}, error) {
	// TODO: Implement thrift call
	return nil, nil
}
